[gd_scene load_steps=31 format=3 uid="uid://bgww8jir45ktf"]

[ext_resource type="Script" path="res://Scripts/Enemy/BlueDragoon.gd" id="1_l21kt"]
[ext_resource type="Script" path="res://Scripts/Enemy/EnemyMovement.gd" id="2_hl7h0"]
[ext_resource type="PackedScene" uid="uid://c7rofcxvqilp6" path="res://Scene Objects/Effects/DragoonShades.tscn" id="2_l5ub2"]
[ext_resource type="Script" path="res://Scripts/Enemy/EnemyPlayerDetection.gd" id="3_7a55a"]
[ext_resource type="PackedScene" uid="uid://jo11axgiuvb5" path="res://Scene Objects/Effects/BlueDragoonHelmet.tscn" id="3_a6lc0"]
[ext_resource type="Script" path="res://Scripts/Enemy/EnemyCollisionDetection.gd" id="4_jvyhu"]
[ext_resource type="Texture2D" uid="uid://bd7ilcb71gc0x" path="res://Sprites/Enemies/BlueDragoon.png" id="5_u74qk"]
[ext_resource type="PackedScene" uid="uid://cve2fw8d2yj8j" path="res://Scene Objects/Effects/ProjectileReflector.tscn" id="8_t8jwq"]
[ext_resource type="PackedScene" uid="uid://ce2kqx88sgobh" path="res://Scene Objects/Effects/MagicPowerParticles.tscn" id="9_vyrkr"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f1n2w"]
radius = 12.0
height = 57.6

[sub_resource type="AtlasTexture" id="AtlasTexture_tsods"]
atlas = ExtResource("5_u74qk")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrk4o"]
atlas = ExtResource("5_u74qk")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tlwq5"]
atlas = ExtResource("5_u74qk")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nawej"]
atlas = ExtResource("5_u74qk")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1qo1"]
atlas = ExtResource("5_u74qk")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wae16"]
atlas = ExtResource("5_u74qk")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7wlr"]
atlas = ExtResource("5_u74qk")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sh1qo"]
atlas = ExtResource("5_u74qk")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_goof3"]
atlas = ExtResource("5_u74qk")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cq0tn"]
atlas = ExtResource("5_u74qk")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vipc6"]
atlas = ExtResource("5_u74qk")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpt62"]
atlas = ExtResource("5_u74qk")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkwgb"]
atlas = ExtResource("5_u74qk")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajfe8"]
atlas = ExtResource("5_u74qk")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfxdx"]
atlas = ExtResource("5_u74qk")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0r4ty"]
atlas = ExtResource("5_u74qk")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bq1pv"]
atlas = ExtResource("5_u74qk")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wuke"]
atlas = ExtResource("5_u74qk")
region = Rect2(512, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_q7jna"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsods")
}],
"loop": false,
"name": &"Defeat",
"speed": 60.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrk4o")
}],
"loop": true,
"name": &"Idle",
"speed": 60.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tlwq5")
}],
"loop": true,
"name": &"IdleHelmet",
"speed": 60.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nawej")
}],
"loop": false,
"name": &"Jump",
"speed": 60.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1qo1")
}],
"loop": false,
"name": &"JumpHelmet",
"speed": 60.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wae16")
}],
"loop": false,
"name": &"WingedDefeat",
"speed": 60.0
}, {
"frames": [{
"duration": 10.0,
"texture": SubResource("AtlasTexture_m7wlr")
}],
"loop": false,
"name": &"WingedFall",
"speed": 60.0
}, {
"frames": [{
"duration": 10.0,
"texture": SubResource("AtlasTexture_sh1qo")
}],
"loop": false,
"name": &"WingedFallHelmet",
"speed": 60.0
}, {
"frames": [{
"duration": 10.0,
"texture": SubResource("AtlasTexture_goof3")
}, {
"duration": 10.0,
"texture": SubResource("AtlasTexture_cq0tn")
}, {
"duration": 10.0,
"texture": SubResource("AtlasTexture_vipc6")
}],
"loop": true,
"name": &"WingedFloat",
"speed": 60.0
}, {
"frames": [{
"duration": 10.0,
"texture": SubResource("AtlasTexture_wpt62")
}, {
"duration": 10.0,
"texture": SubResource("AtlasTexture_qkwgb")
}, {
"duration": 10.0,
"texture": SubResource("AtlasTexture_ajfe8")
}],
"loop": true,
"name": &"WingedFloatHelmet",
"speed": 60.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfxdx")
}],
"loop": true,
"name": &"WingedIdle",
"speed": 60.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0r4ty")
}],
"loop": true,
"name": &"WingedIdleHelmet",
"speed": 60.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bq1pv")
}],
"loop": true,
"name": &"WingedJump",
"speed": 60.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wuke")
}],
"loop": true,
"name": &"WingedJumpHelmet",
"speed": 60.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_q7l5y"]
radius = 12.0
height = 57.6

[node name="BlueDragoon" type="CharacterBody2D" node_paths=PackedStringArray("reflector_sprite", "magic_particles", "movement", "collision_detection", "player_detection", "body", "sprite", "shape", "visibility_notifier")]
process_mode = 4
light_mask = 8
visibility_layer = 8
disable_mode = 1
collision_layer = 64
collision_mask = 3
floor_stop_on_slope = false
floor_constant_speed = true
floor_max_angle = 1.39626
floor_snap_length = 24.0
platform_floor_layers = 3
safe_margin = 0.001
script = ExtResource("1_l21kt")
jump_speed = 320.0
max_fall_speed = 256.0
dropped_shades_scene = ExtResource("2_l5ub2")
dropped_helmet_scene = ExtResource("3_a6lc0")
reflector_sprite = NodePath("ProjectileReflector")
magic_particles = NodePath("MagicPowerParticles")
movement = NodePath("Enemy/Movement")
collision_detection = NodePath("Enemy/CollisionDetection")
player_detection = NodePath("Enemy/PlayerDetection")
body = NodePath(".")
sprite = NodePath("AnimatedSprite2D")
shape = NodePath("CollisionShape2D")
visibility_notifier = NodePath("VisibleOnScreenNotifier2D")
defeated_deactivation_camera_distance = 800.0
gravity_scale = 2.0
z_index_on_defeat = 8
metadata/Tag = "Enemy"

[node name="Enemy" type="Node" parent="."]

[node name="Movement" type="Node" parent="Enemy" node_paths=PackedStringArray("enemy")]
script = ExtResource("2_hl7h0")
enemy = NodePath("../..")

[node name="PlayerDetection" type="Node" parent="Enemy" node_paths=PackedStringArray("enemy", "front_sightline_raycast", "back_sightline_raycast")]
script = ExtResource("3_7a55a")
enemy = NodePath("../..")
player_detection_distance = 640.0
enemy_sightline_distance = 448.0
enemy_short_sightline_distance = 224.0
front_sightline_raycast = NodePath("../../PlayerRayCastFront")
back_sightline_raycast = NodePath("../../PlayerRayCastBack")

[node name="CollisionDetection" type="Node" parent="Enemy" node_paths=PackedStringArray("enemy", "raycast_wall_top_l", "raycast_wall_mid_l", "raycast_wall_bot_l", "raycast_wall_top_r", "raycast_wall_mid_r", "raycast_wall_bot_r", "raycast_ledge_l", "raycast_ledge_r")]
script = ExtResource("4_jvyhu")
enemy = NodePath("../..")
raycast_wall_top_l = NodePath("../../WallRayCastTopL")
raycast_wall_mid_l = NodePath("../../WallRayCastMidL")
raycast_wall_bot_l = NodePath("../../WallRayCastBotL")
raycast_wall_top_r = NodePath("../../WallRayCastTopR")
raycast_wall_mid_r = NodePath("../../WallRayCastMidR")
raycast_wall_bot_r = NodePath("../../WallRayCastBotR")
raycast_ledge_l = NodePath("../../LedgeRayCastL")
raycast_ledge_r = NodePath("../../LedgeRayCastR")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
rect = Rect2(-16, -32, 32, 64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 3
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_f1n2w")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
light_mask = 8
visibility_layer = 8
z_index = 3
sprite_frames = SubResource("SpriteFrames_q7jna")
animation = &"Idle"
autoplay = "Idle"
flip_h = true

[node name="ProjectileReflector" parent="." instance=ExtResource("8_t8jwq")]
visible = false

[node name="MagicPowerParticles" parent="." instance=ExtResource("9_vyrkr")]
color = Color(0.14902, 0.32549, 0.741176, 1)

[node name="ContactHitbox" type="Area2D" parent="."]
position = Vector2(0, 3)
collision_layer = 32
collision_mask = 36

[node name="ContactHitboxShape" type="CollisionShape2D" parent="ContactHitbox"]
shape = SubResource("CapsuleShape2D_q7l5y")

[node name="PlayerRayCastFront" type="RayCast2D" parent="."]
position = Vector2(0, -12)
target_position = Vector2(0, 0)
collision_mask = 4
hit_from_inside = true
collide_with_areas = true

[node name="PlayerRayCastBack" type="RayCast2D" parent="."]
position = Vector2(0, -12)
target_position = Vector2(0, 0)
collision_mask = 4
hit_from_inside = true
collide_with_areas = true

[node name="WallRayCastTopL" type="RayCast2D" parent="."]
position = Vector2(0, -17)
target_position = Vector2(-13, 0)
collision_mask = 11
hit_from_inside = true
collide_with_areas = true

[node name="WallRayCastMidL" type="RayCast2D" parent="."]
position = Vector2(0, 3)
target_position = Vector2(-13, 0)
collision_mask = 11

[node name="WallRayCastBotL" type="RayCast2D" parent="."]
position = Vector2(0, 23)
target_position = Vector2(-13, 0)
collision_mask = 11
hit_from_inside = true
collide_with_areas = true

[node name="WallRayCastTopR" type="RayCast2D" parent="."]
position = Vector2(0, -17)
target_position = Vector2(13, 0)
collision_mask = 11
hit_from_inside = true
collide_with_areas = true

[node name="WallRayCastMidR" type="RayCast2D" parent="."]
position = Vector2(0, 3)
target_position = Vector2(13, 0)
collision_mask = 11

[node name="WallRayCastBotR" type="RayCast2D" parent="."]
position = Vector2(0, 23)
target_position = Vector2(13, 0)
collision_mask = 11
hit_from_inside = true
collide_with_areas = true

[node name="LedgeRayCastL" type="RayCast2D" parent="."]
position = Vector2(-12, 32)
target_position = Vector2(0, 24)
collision_mask = 11

[node name="LedgeRayCastR" type="RayCast2D" parent="."]
position = Vector2(12, 32)
target_position = Vector2(0, 24)
collision_mask = 11

[connection signal="player_approach" from="Enemy/PlayerDetection" to="." method="on_player_approach"]
[connection signal="player_jump" from="Enemy/PlayerDetection" to="." method="on_player_jump"]
[connection signal="player_retreat" from="Enemy/PlayerDetection" to="." method="on_player_retreat"]
[connection signal="leaving_ground" from="Enemy/CollisionDetection" to="." method="on_leaving_ground"]
[connection signal="player_collision" from="Enemy/CollisionDetection" to="." method="on_player_collision"]
[connection signal="touching_ceiling" from="Enemy/CollisionDetection" to="." method="on_touching_ceiling"]
[connection signal="touching_ground" from="Enemy/CollisionDetection" to="." method="on_touching_ground"]
[connection signal="body_entered" from="ContactHitbox" to="Enemy/CollisionDetection" method="_on_contact_hitbox_body_entered"]
[connection signal="body_exited" from="ContactHitbox" to="Enemy/CollisionDetection" method="_on_contact_hitbox_body_exited"]
